common-applications/control/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: common-jenkins
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/instance: control-jenkins
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-1.7.4
  name: jenkins
  namespace: jenkins
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: common-jenkins
      app.kubernetes.io/component: jenkins-master
      app.kubernetes.io/instance: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: common-jenkins
        app.kubernetes.io/component: jenkins-master
        app.kubernetes.io/instance: jenkins
        app.kubernetes.io/managed-by: Tiller
        app.kubernetes.io/name: jenkins
        helm.sh/chart: jenkins-1.7.4
    spec:
      containers:
      - args:
        - --argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)
        - --argumentsRealm.roles.$(ADMIN_USER)=admin
        image: swr.cn-north-4.myhuaweicloud.com/openeuler/jenkins:2.395-jdk11
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: http
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 50000
          name: slavelistener
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "2"
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/jenkins_home
          name: jenkins-home
        - mountPath: /var/jenkins_config
          name: jenkins-config
          readOnly: true
        - mountPath: /usr/share/jenkins/ref/secrets/
          name: secrets-dir
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      serviceAccount: jenkins
      serviceAccountName: jenkins
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: plugins
      - emptyDir: {}
        name: tmp
      - configMap:
          defaultMode: 420
          name: jenkins
        name: jenkins-config
      - emptyDir: {}
        name: secrets-dir
      - emptyDir: {}
        name: plugin-dir
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
