common-applications/control/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: argocd
spec:
  tls:
    - hosts:
        - jenkins.osinfra.cn
      secretName: jenkins-tls
  rules:
    - host: jenkins.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
